# 92project

./: CMakeLists.txt  README  TODO
dany/: Makefile  assignment  assignment.c  btree.c  cd.c  echo  echo.c  environment.c  tree.h
doc/: 42sh.1  Doxyfile
src/: 42sh.c
src/ast_reader/: .read_ast.c.swp  .rules_ast.c.swp  CMakeLists.txt  func_ast.c  read_ast.c  rules_ast.c
src/exec/: CMakeLists.txt  Makefile  cd.c  echo.c  executor.c  export.c  pipe.c
src/include/: 42sh.h  ast_reader.h  executor.h  lexer.h  parser.h  tree.h
src/lexer/: CMakeLists.txt  check.c  fct_lexer.c  header_lexer.h  lexer.c  string.c  type.c
src/parser/: CMakeLists.txt  and_or_parser.c  command_parser.c  func_parser.c  input_parser.c  list_parser.c  pipeline_parser.c  redir_parser.c  rules_parser.c  shellcom_parser.c
src/tree/: CMakeLists.txt  assignment.c  btree.c  environment.c  ntree.c
tests/: 42sh  aide.py  command1.yml  install.sh  t1.py  test8.yml  tests.py  testsuite.py
tests/ands/: and1.yml  and2.yml  and3.yml
tests/commands/: command2.yml  command3.yml  easdf.yml
tests/echo/: echo1.yml  echo2.yml  echo3.yml  echo4.yml  echo5.yml  echo6.yml  echo7.yml  echo8.yml  echo9.yml
tests/export/: export -p.yml  export TEST.yml  export TEST=deleteme; export -n TEST.yml  export TEST=ok.yml  export.yml
tests/if/: if1.yml  if2.yml  if3.yml
tests/lists/: list1.yml  list2.yml  list3.yml
tests/multiples/: mult1.yml  mult2.yml
tests/ors/: or1.yml  or2.yml  or3.yml
tests/pipes/: pipe1.yml  pipe2.yml
tests/testcase/: case1.yml  case2.yml  case3.yml  case4.yml
(+36 files in other folders)
